# hermes-control

./: .gitignore  AGENTS.md  Cargo.toml  README.md  deny.toml  plan_rust_control_rewrite.md  plan_wsl2_hermes_provisioning.md  start-hermes-control-gui.ps1  start-hermes-control.ps1  stop-hermes-control.ps1
apps/hermes-control-gui/: index.html  package-lock.json  package.json
apps/hermes-control-gui/src/: App.tsx  styles.css
apps/hermes-control-gui/src-tauri/: Cargo.toml  tauri.conf.json
apps/hermes-control-gui/src-tauri/capabilities/: default.json
apps/hermes-control-gui/src-tauri/src/: lib.rs  main.rs
apps/hermes-control-gui/src/lib/: daemonClient.ts  i18n.test.ts  i18n.ts  types.ts  viewModel.test.ts  viewModel.ts
config/: control.toml  model-runtimes.toml  providers.toml  ui-theme.toml
crates/hermes-control-bot/: Cargo.toml
crates/hermes-control-bot/src/: lib.rs  main.rs
crates/hermes-control-bot/tests/: bot_boundary.rs
crates/hermes-control-cli/: Cargo.toml
crates/hermes-control-cli/src/: lib.rs  main.rs
crates/hermes-control-cli/tests/: daemon_commands.rs  help_contract.rs  read_only_commands.rs
crates/hermes-control-core/: Cargo.toml
crates/hermes-control-core/src/: lib.rs
crates/hermes-control-core/tests/: config_schema.rs  phase4_operation_plans.rs  phase4_wsl_install_assets.rs  phase5_model_runtime_plans.rs  phase5_vllm_project_runtime_assets.rs  read_only_core.rs
crates/hermes-control-daemon/: Cargo.toml
crates/hermes-control-daemon/src/: lib.rs  main.rs
crates/hermes-control-daemon/tests/: phase3_api.rs  phase4_actions.rs  phase6_route_switch.rs
crates/hermes-control-gui/: Cargo.toml
crates/hermes-control-gui/src/: lib.rs
crates/hermes-control-gui/tests/: phase8_gui_boundary.rs
crates/hermes-control-testkit/: Cargo.toml
crates/hermes-control-testkit/src/: lib.rs
crates/hermes-control-types/: Cargo.toml
crates/hermes-control-types/src/: lib.rs
docs/: AI_CHANGE_GUIDE.md  AI_HANDOFF.md  APP_CODE_MAP.md  RECENT_CHANGES.md  bot-process-boundary.md  wsl-root-integration.md
scripts/wsl-root/: install.sh
tests/wsl-root/: openwebui_refresh.sh  openwebui_sync.sh  route_apply_claude_relay.sh  route_apply_deepseek.sh  route_apply_openai_compatible.sh  route_apply_openwebui_rollback.sh
vLLM/: README.md
vLLM/scripts/: bootstrap.sh  env.sh  serve-openai.sh  start-qwen36-int4-eager.sh  start-qwen36-mtp-tuned.sh  start-qwen36-mtp.sh
