[workspace]
members = [
    "crates/hermes-control-types",
    "crates/hermes-control-core",
    "crates/hermes-control-daemon",
    "crates/hermes-control-cli",
    "crates/hermes-control-bot",
    "crates/hermes-control-gui",
    "crates/hermes-control-testkit",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.95"

[workspace.dependencies]
anyhow = "1.0"
axum = "0.8.9"
clap = { version = "4.6.1", features = ["derive"] }
hermes-control-types = { path = "crates/hermes-control-types" }
reqwest = { version = "0.13.3", default-features = false, features = ["json", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
teloxide = { version = "0.17.0", default-features = false, features = ["ctrlc_handler", "rustls"] }
tempfile = "3.24.0"
thiserror = "2.0"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread"] }
toml = "0.9.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = { version = "2.5", features = ["serde"] }
