[package]
name = "hermes-control-bot"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
hermes-control-types.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
teloxide.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true

[dev-dependencies]
serde_json.workspace = true

[[bin]]
name = "hermes-control-bot"
path = "src/main.rs"
