[package]
name = "hermes-control-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
hermes-control-core = { path = "../hermes-control-core" }
hermes-control-types.workspace = true
serde_json.workspace = true
tokio.workspace = true
