[package]
name = "hermes-control-gui-tauri"
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.95"

[lib]
name = "hermes_control_gui_tauri"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.0", features = [] }

[dependencies]
hermes-control-gui = { path = "../../../crates/hermes-control-gui" }
hermes-control-types = { path = "../../../crates/hermes-control-types" }
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.9.5", features = [] }
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread"] }
